--- a/Docker/soft/nginx/conf/conf.d/vhost.conf
+++ b/Docker/soft/nginx/conf/conf.d/vhost.conf
@@ -1,8 +1,8 @@
 server{
 		listen 80;
         listen 443 ssl http2;
-        server_name  *.XXX.com;
-        root   "/data/www/XXX";
+        server_name  *;
+        root   "/data/www/HelloWorld";
         index  index.html index.htm index.php;
 	location / {
          if (!-e $request_filename) {
