--- a/Docker/soft/nginx/conf/conf.d/vhost.conf
+++ b/Docker/soft/nginx/conf/conf.d/vhost.conf
@@ -1,7 +1,7 @@
 server{
-		listen 80;
-        listen 443 ssl http2;
-        server_name  *;
+	listen 80;
+        #listen 443 ssl http2;
+        server_name  localhost;
         root   "/data/www/HelloWorld";
         index  index.html index.htm index.php;
 	location / {
