--- a/Docker/compose/docker-compose.yml
+++ b/Docker/compose/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     volumes:
     - ../soft/mysql/mysql5.7/data:/var/lib/mysql
-    - ../soft/mysql/mysql5.7/logs:/var/log/mysql
+    - ../soft/mysql/mysql5.7/log:/var/log/mysql
     - ../soft/mysql/mysql5.7/conf:/etc/mysql:ro
     - /etc/localtime:/etc/localtime:ro
     ports:
